Bug 479082 - Dolphin may implicitly skip files when copying
Summary: Dolphin may implicitly skip files when copying
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.113.0
Platform: Other Linux
: VHI critical
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-27 16:29 UTC by popov895
Modified: 2024-01-16 15:21 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.115
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description popov895 2023-12-27 16:29:51 UTC
SUMMARY

When copying folders and files with the same name, the files are automatically skipped if you press the "Skip" button for the folders.

STEPS TO REPRODUCE

1. Create folders "111" and "222" and files "111.txt" and "222.txt" in the same location
2. Select all the created folders and files and copy them somewhere else
3. Select all the created folders and files again and copy them to the same place where you copied them in the previous step; click "Skip" when you are asked to overwrite folders

OBSERVED RESULT

You will not be asked to overwrite files, they will be automatically skipped.

EXPECTED RESULT

You will be asked about overwriting files too.

SOFTWARE/OS VERSIONS

Operating System: openSUSE Tumbleweed 20231225
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.113.0
Qt Version: 5.15.11
Kernel Version: 6.6.6-1-default (64-bit)
Graphics Platform: X11
Comment 1 Bug Janitor Service 2023-12-28 09:42:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1526
Comment 2 Méven Car 2024-01-13 08:48:41 UTC
Git commit b00b1a65344ab701d3d8c3d529177f9c640fe1bc by Méven Car, on behalf of Eugene Popov.
Committed on 13/01/2024 at 09:34.
Pushed by meven into branch 'master'.

copyjob: Fix implicitly skipping files when copying

Don't forget to add a slash to the path when adding a folder to the skip list.

M  +2    -2    src/core/copyjob.cpp

https://invent.kde.org/frameworks/kio/-/commit/b00b1a65344ab701d3d8c3d529177f9c640fe1bc
Comment 3 Méven 2024-01-13 08:49:05 UTC
Git commit 71244e46c8abaa12481936dce1f713f4140b8063 by Méven Car, on behalf of Eugene Popov.
Committed on 13/01/2024 at 09:48.
Pushed by meven into branch 'kf5'.

copyjob: Fix implicitly skipping files when copying

Don't forget to add a slash to the path when adding a folder to the skip list.
(cherry picked from commit b00b1a65344ab701d3d8c3d529177f9c640fe1bc)

M  +2    -2    src/core/copyjob.cpp

https://invent.kde.org/frameworks/kio/-/commit/71244e46c8abaa12481936dce1f713f4140b8063