copyjob: Fix implicitly skipping files when copying

Don't forget to add a slash to the path when adding a folder to the skip list.

BUG: 479082
(cherry picked from commit b00b1a65344ab701d3d8c3d529177f9c640fe1bc)